--- a/PressHmi/View/MainWindow.xaml
+++ b/PressHmi/View/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:control="clr-namespace:PressHmi.View.Controls" 
         xmlns:local="clr-namespace:PressHmi.View"
         mc:Ignorable="d" AllowsTransparency="False" Background="{DynamicResource HmiBackground}"
-        Title="MainWindow" Height="1080" Width="1920" ResizeMode="NoResize"
+        Title="MainWindow" Height="768" Width="1024" ResizeMode="NoResize"
         WindowStyle="None" BorderBrush="DarkGray" BorderThickness="0" 
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
@@ -35,9 +35,9 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="57*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -52,11 +52,11 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,10,0"
-                       Text="{Binding CncStaticInfo.WorkPartName}" 
+                       Text="?????????  (??????)" 
                        Foreground="{DynamicResource TextNormalForeground}" FontSize="{DynamicResource TextNormalSize}" />
 
             <Button Style="{StaticResource MainAlarmNormalButton}" Content="{Binding _DisAlarm}" Visibility="{Binding CncStaticInfo.CncAlarmFlag,Converter={StaticResource _cavc}}"
-                    Grid.Row="1" Grid.Column="0" Panel.ZIndex="10" x:Name="alarmGrid" Margin="3,0,0,0" FontSize="{StaticResource TextPrimerSize}"
+                    Grid.Row="1" Grid.Column="0" Panel.ZIndex="10" x:Name="alarmGrid" Margin="3,0,0,0" FontSize="16"
                     Background="Red" Foreground="White">
 
             </Button>
@@ -73,12 +73,12 @@
 
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="70"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="59*"/>
+                <ColumnDefinition Width="5*"/>
             </Grid.ColumnDefinitions>
 
             <Grid Grid.Column="0" Grid.Row="1">
@@ -118,7 +118,7 @@
                         BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelPrimerBackground}">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="24"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
@@ -135,10 +135,10 @@
                                    Text="急停"/>
                         <TextBlock Grid.Row="0" Grid.Column="3" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource TextPrimerSize}"
                                    Text="故障"/>
-                        <Ellipse Grid.Column="0" Grid.Row="1" Width="30" Height="30" Fill="{Binding CncStaticInfo.MainStatus,Converter={StaticResource _mspcc}}"/>
-                        <Ellipse Grid.Column="1" Grid.Row="1" Width="30" Height="30" Fill="{Binding CncStaticInfo.MainStatus,Converter={StaticResource _msdcc}}"/>
-                        <Ellipse Grid.Column="2" Grid.Row="1" Width="30" Height="30" Fill="{Binding CncStaticInfo.MainStatus,Converter={StaticResource _msecc}}"/>
-                        <Ellipse Grid.Column="3" Grid.Row="1" Width="30" Height="30" Fill="{Binding CncStaticInfo.MainStatus,Converter={StaticResource _msacc}}"/>
+                        <Ellipse Grid.Column="0" Grid.Row="1" Width="20" Height="20" Fill="{Binding CncStaticInfo.MainStatus,Converter={StaticResource _mspcc}}"/>
+                        <Ellipse Grid.Column="1" Grid.Row="1" Width="20" Height="20" Fill="{Binding CncStaticInfo.MainStatus,Converter={StaticResource _msdcc}}"/>
+                        <Ellipse Grid.Column="2" Grid.Row="1" Width="20" Height="20" Fill="{Binding CncStaticInfo.MainStatus,Converter={StaticResource _msecc}}"/>
+                        <Ellipse Grid.Column="3" Grid.Row="1" Width="20" Height="20" Fill="{Binding CncStaticInfo.MainStatus,Converter={StaticResource _msacc}}"/>
                     </Grid>
                 </Border>
 
@@ -155,7 +155,7 @@
                     <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelPrimerBackground}">
                         <TextBlock Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource TextPrimerSize}"
-                                   Text="{Binding CncStaticInfo.SliderPosition}"/>
+                                   Text="??"/>
                     </Border>
                 </Grid>
 
@@ -172,7 +172,7 @@
                     <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelPrimerBackground}">
                         <TextBlock Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource TextPrimerSize}"
-                                   Text="{Binding CncStaticInfo.SliderSpeed}"/>
+                                   Text="??"/>
                     </Border>
                 </Grid>
 
