--- a/PressHmi/View/Para/ParaSubDieHydrPage.xaml
+++ b/PressHmi/View/Para/ParaSubDieHydrPage.xaml
@@ -2,131 +2,188 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-            xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
-      xmlns:conv="clr-namespace:PressHmi.View.Converters"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PressHmi.View"
       mc:Ignorable="d" 
-      d:DesignHeight="730" d:DesignWidth="1770"
+      d:DesignHeight="608" d:DesignWidth="940"
       Title="ParaSubDieHydrPage">
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
-        </i:EventTrigger>
-        <i:EventTrigger EventName="Unloaded">
-            <i:InvokeCommandAction Command="{Binding UnloadedCommand}"/>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
-    <Page.Resources>
-        <Style x:Key="FontAwesome">
-            <Setter Property="TextElement.FontFamily" Value="pack://application:,,,/PressHmi;component/View/FontAwesome/#FontAwesome" />
-        </Style>
-
-        <conv:DieHydrRunStringConverter x:Key="_dhrsc"/>
-        <conv:DieHydrStateColorConverter x:Key="_dhscc"/>
-        <conv:DieHydrStateStringConverter x:Key="_dhssc"/>
-        <conv:IOColorConverter x:Key="_iocc"/>
-    </Page.Resources>
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Margin="2,2,2,2">
+        <Grid Grid.Row="0"  Margin="2,2,2,2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
+                <RowDefinition Height="30"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelNormalBackground}">
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0"  FontSize="{StaticResource TextPrimerSize}"
-                                   Text="模具液压设定"/>
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0"
+                                   Text="液压压力"/>
             </Border>
             <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource HmiBorder}">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="80"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="400"/>
+                        <ColumnDefinition Width="180"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}"
+                               Text="下模顶出压力(MPa):" />
+                    <TextBox Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}"
+                               Text="下模退出压力(MPa):" />
+                    <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
+                    <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}"
+                               Text="上模顶出压力(MPa):" />
+                    <TextBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
+                    <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}"
+                               Text="上模退出压力(MPa):" />
+                    <TextBox Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
+                </Grid>
+            </Border>
+        </Grid>
+
+        <Grid Grid.Row="1"  Margin="2,2,2,2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
+                        BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelNormalBackground}">
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0"
+                                   Text="模具液压顶缸"/>
+            </Border>
+            <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
+                        BorderBrush="{DynamicResource HmiBorder}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="180"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}"
+                               Text="开始位置(mm):" />
+                    <TextBox Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}"
+                               Text="开始方向:" />
+                    <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
+                    <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}"
+                               Text="结束位置(mm):" />
+                    <TextBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
+                    <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}"
+                               Text="结束方向:" />
+                    <TextBox Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
+                </Grid>
+            </Border>
+        </Grid>
+
+        <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="2,2,2,2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
+                        BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelNormalBackground}">
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0"
+                                   Text="模具液压顶缸控制"/>
+            </Border>
+            <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
+                        BorderBrush="{DynamicResource HmiBorder}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="工作模式:" />
-                    <StackPanel Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0"  Orientation="Horizontal">
-                        <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,10,0" 
-                                Background="Gray" Foreground="White"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="120" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="拉伸" Command="{Binding ModePull_SetCmd}"/>
-                        <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,10,0" 
-                                Background="Gray" Foreground="White"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="120" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="顶出" Command="{Binding ModePush_SetCmd}"/>
-                        <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,10,0" 
-                                Background="Gray" Foreground="White"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="120" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="不使用" Command="{Binding ModeNoUse_SetCmd}"/>
-                    </StackPanel>
-
+                    <TextBox Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
                     <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
-                               Text="压力设定(MPa):" />
-                    <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="380" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaDieHydrInfo.Pressure}" Tag="&#xf044;" Command="{Binding Pressure_SetCmd}" />
+                               Text="模具液压顶出压力(MPa):" />
+                    <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
                     <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
-                               Text="顶出位置(mm):" />
+                               Text="模具液压退出压力(Mpa):" />
                     <TextBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="380" Height="60"
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
                                Text="99.0" />
-                    <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="380" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaDieHydrInfo.PushPos}" Tag="&#xf044;" Command="{Binding PushPos_SetCmd}"/>
                     <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
-                               Text="顶出延时(ms):" />
-                    <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="380" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaDieHydrInfo.PushDelayTime}" Tag="&#xf044;" Command="{Binding PushDelayTime_SetCmd}"/>
+                               Text="上下模具未接触位置(mm):" />
+                    <TextBox Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
                     <TextBlock Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
-                               Text="实际压力(MPa):" />
+                               Text="调节压力差(MPa):" />
                     <TextBox Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="380" Height="60" IsEnabled="False"
-                               Text="{Binding ParaDieHydrInfo.ActualPressure}" />
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
                     <TextBlock Grid.Column="0" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
-                               Text="实际位置(mm):" />
+                               Text="保压倒计时时间(s):" />
                     <TextBox Grid.Column="1" Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="380" Height="60" IsEnabled="False"
-                               Text="{Binding ParaDieHydrInfo.ActualPos}" />
-                    <TextBlock Grid.Column="0" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}"
-                               Text="系统运行指示灯:" />
-                    <Button Grid.Column="1" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                            Background="{Binding ParaDieHydrInfo.Run,Converter={StaticResource _iocc}}" Foreground="White"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="380" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaDieHydrInfo.Run,Converter={StaticResource _dhrsc}}" IsEnabled="False"/>
-                    <TextBlock Grid.Column="0" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}"
-                               Text="系统运行状态:" />
-                    <Button Grid.Column="1" Grid.Row="7" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                            Background="{Binding ParaDieHydrInfo.State,Converter={StaticResource _dhscc}}" Foreground="White"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="380" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaDieHydrInfo.State,Converter={StaticResource _dhssc}}" IsEnabled="False"/>
+                               FontSize="{DynamicResource TextPrimerSize}" Width="160"
+                               Text="99.0" />
                 </Grid>
             </Border>
         </Grid>
