--- a/PressHmi/View/Para/ParaSubPressureMaintPage.xaml
+++ b/PressHmi/View/Para/ParaSubPressureMaintPage.xaml
@@ -7,7 +7,7 @@
       xmlns:SciChart="http://schemas.abtsoftware.co.uk/scichart"
       xmlns:local="clr-namespace:PressHmi.View"
       mc:Ignorable="d" 
-      d:DesignHeight="730" d:DesignWidth="1770"
+      d:DesignHeight="608" d:DesignWidth="940"
       Title="ParaSubPressureMaintPage">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -17,27 +17,20 @@
             <i:InvokeCommandAction Command="{Binding UnloadedCommand}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
-
-    <Page.Resources>
-        <Style x:Key="FontAwesome">
-            <Setter Property="TextElement.FontFamily" Value="pack://application:,,,/PressHmi;component/View/FontAwesome/#FontAwesome" />
-        </Style>
-    </Page.Resources>
     
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="70"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="240"/>
+            <RowDefinition Height="165"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Margin="2,2,2,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="280"/>
-                <ColumnDefinition Width="280"/>
-                <ColumnDefinition Width="280"/>
-                <ColumnDefinition Width="280"/>
-                <ColumnDefinition Width="280"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="187"/>
+                <ColumnDefinition Width="187"/>
+                <ColumnDefinition Width="187"/>
+                <ColumnDefinition Width="187"/>
+                <ColumnDefinition Width="187"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
                 <Grid.RowDefinitions>
@@ -46,14 +39,14 @@
                 </Grid.RowDefinitions>
                 <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="{DynamicResource ContentPanelNormalBackground}">
-                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextPrimerSize}"
+                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextSmallSize}"
                                    Text="保压压力(T)"/>
                 </Border>
                 <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="Transparent">
 
-                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0" Tag="&#xf044;"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="280" Height="50" Style="{StaticResource ParaInputInBoxButton}"
+                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0"
+                               FontSize="{DynamicResource TextPrimerSize}" Width="187" Height="30" Style="{StaticResource ParaInputInBoxButton}"
                                Content="{Binding ParaPressureMaintInfo.StrPressure}" Command="{Binding PressureSetCmd}"/>
                 </Border>
             </Grid>
@@ -65,13 +58,13 @@
                 </Grid.RowDefinitions>
                 <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="{DynamicResource ContentPanelNormalBackground}">
-                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextPrimerSize}"
+                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextSmallSize}"
                                    Text="保压时间(s)"/>
                 </Border>
                 <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="Transparent">
-                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0" Tag="&#xf044;"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="280" Height="50"  Style="{StaticResource ParaInputInBoxButton}"
+                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0"
+                               FontSize="{DynamicResource TextPrimerSize}" Width="187" Height="30" Style="{StaticResource ParaInputInBoxButton}"
                                Content="{Binding ParaPressureMaintInfo.StrTime}" Command="{Binding TimeSetCmd}"/>
                 </Border>
             </Grid>
@@ -83,13 +76,13 @@
                 </Grid.RowDefinitions>
                 <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="{DynamicResource ContentPanelNormalBackground}">
-                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextPrimerSize}"
+                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextSmallSize}"
                                    Text="保压前延时(s)"/>
                 </Border>
                 <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="Transparent">
-                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0" Tag="&#xf044;"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="280" Height="50"  Style="{StaticResource ParaInputInBoxButton}"
+                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0"
+                               FontSize="{DynamicResource TextPrimerSize}" Width="187" Height="30" Style="{StaticResource ParaInputInBoxButton}"
                                Content="{Binding ParaPressureMaintInfo.StrPreDelayTime}" Command="{Binding PreDelayTimeSetCmd}"/>
                 </Border>
             </Grid>
@@ -101,13 +94,13 @@
                 </Grid.RowDefinitions>
                 <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="{DynamicResource ContentPanelNormalBackground}">
-                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextPrimerSize}"
+                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextSmallSize}"
                                    Text="保压切换方式"/>
                 </Border>
                 <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="Transparent">
-                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0" Tag="&#xf044;"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="280" Height="50"  Style="{StaticResource ParaInputInBoxButton}"
+                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0"
+                               FontSize="{DynamicResource TextPrimerSize}" Width="187" Height="30" Style="{StaticResource ParaInputInBoxButton}"
                                Content="{Binding ParaPressureMaintInfo.ChangeMode}" Command="{Binding ChangeModeSetCmd}"/>
                 </Border>
             </Grid>
@@ -119,20 +112,15 @@
                 </Grid.RowDefinitions>
                 <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="{DynamicResource ContentPanelNormalBackground}">
-                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextPrimerSize}"
+                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="{DynamicResource TextSmallSize}"
                                    Text="保压切换压力(T)"/>
                 </Border>
                 <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource ContentPanelNormalBackground}" Background="Transparent">
-                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0" Tag="&#xf044;"
-                               FontSize="{DynamicResource TextPrimerSize}" Width="280" Height="50"  Style="{StaticResource ParaInputInBoxButton}"
+                    <Button HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="0,0,0,0"
+                               FontSize="{DynamicResource TextPrimerSize}" Width="187" Height="30" Style="{StaticResource ParaInputInBoxButton}"
                                Content="{Binding ParaPressureMaintInfo.StrChangePressure}" Command="{Binding ChangePressureSetCmd}"/>
                 </Border>
-            </Grid>
-
-            <Grid Grid.Column="5">
-                <Button  Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,20,0" FontSize="{StaticResource TextPrimerSize}"
-                Style="{StaticResource btn-primary}" Content="曲线预览" Height="80" Width="280"/>
             </Grid>
         </Grid>
         <Grid Grid.Row="1">
@@ -163,6 +151,7 @@
             </SciChart:SciChartSurface>
         </Grid>
 
-
+        <Button  Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,20,0"
+                Style="{StaticResource btn-primary}" Content="曲线预览" Height="60" Width="160"/>
     </Grid>
 </Page>
