--- a/PressHmi/View/Para/ParaSubProcManagementPage.xaml
+++ b/PressHmi/View/Para/ParaSubProcManagementPage.xaml
@@ -7,7 +7,7 @@
       xmlns:local="clr-namespace:PressHmi.View"
       xmlns:conv="clr-namespace:PressHmi.View.Converters" 
       mc:Ignorable="d" 
-      d:DesignHeight="730" d:DesignWidth="1770"
+      d:DesignHeight="608" d:DesignWidth="940"
       Title="ParaSubProcManagementPage">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -72,20 +72,20 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="80"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="500"/>
+            <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0"  Margin="2,2,0,2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
+                <RowDefinition Height="30"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelNormalBackground}">
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextPrimerSize}"
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextSmallSize}"
                                    Text="配方列表"/>
             </Border>
             <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
@@ -115,30 +115,30 @@
 
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="60"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Width="240" Height="80" Margin="10,0,10,0" FontSize="{StaticResource TextPrimerSize}" Style="{StaticResource btn-info}" Content="刷新列表" Command="{Binding RefreshFileCommand}"/>
-                <Button Width="240" Height="80" Margin="10,0,10,0" FontSize="{StaticResource TextPrimerSize}" Style="{StaticResource btn-primary}" Content="显示配方" Command="{Binding LoadAndShowCommand}"/>
-                <Button Width="240" Height="80" Margin="10,0,10,0" FontSize="{StaticResource TextPrimerSize}" Style="{StaticResource btn-warning}" Content="保存配方" Command="{Binding SaveToPcCommand}"/>
-                <Button Width="240" Height="80" Margin="10,0,10,0" FontSize="{StaticResource TextPrimerSize}" Style="{StaticResource btn-success}" Content="生效配方" Command="{Binding SaveAndApplicationCommand}"/>
+                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-info}" Content="刷新配方列表" Command="{Binding RefreshFileCommand}"/>
+                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-primary}" Content="显示配方" Command="{Binding LoadAndShowCommand}"/>
+                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-warning}" Content="保存配方" Command="{Binding SaveToPcCommand}"/>
+                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-success}" Content="生效配方" Command="{Binding SaveAndApplicationCommand}"/>
             </StackPanel>
             <Grid Grid.Row="1"  Margin="2,2,2,2">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="30"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelNormalBackground}">
-                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextPrimerSize}"
+                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextSmallSize}"
                                    Text="工艺参数"/>
                 </Border>
                 <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource HmiBorder}">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="24"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="0">
@@ -184,10 +184,10 @@
             <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource HmiBorder}" Background="Transparent">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" FontSize="{DynamicResource TextPrimerSize}"
+                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" FontSize="{DynamicResource TextSmallSize}"
                                    Text="当前配方路径:"/>
-                    <TextBox Text="{Binding CurFileFolder}" Background="Transparent" Width="1200" Height="50" Margin="10,2,10,2" IsEnabled="False" FontSize="{DynamicResource TextPrimerSize}"/>
-                    <Button Content="选择配方路径" Width="300" Height="50" FontSize="{DynamicResource TextPrimerSize}" Style="{StaticResource btn-success}" Command="{Binding FileFolderCommand}"/>
+                    <TextBox Text="{Binding CurFileFolder}" Background="Transparent" Width="700" Margin="10,2,10,2" IsEnabled="False"/>
+                    <Button Content="选择配方路径" Style="{StaticResource btn-success}" Command="{Binding FileFolderCommand}"/>
                 </StackPanel>
 
             </Border>
