--- a/PressHmi/View/Maintain/MaintainSubLimitPage.xaml
+++ b/PressHmi/View/Maintain/MaintainSubLimitPage.xaml
@@ -25,6 +25,10 @@
     </Page.Resources>
  
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="300" />
+        </Grid.ColumnDefinitions>
         <DataGrid AlternationCount="2" Style="{x:Null}" AutoGenerateColumns="False"  IsReadOnly="False"  ItemsSource="{Binding LimitNodes}" CanUserAddRows="False" ColumnWidth="*" FontSize="20" >
             <DataGrid.RowStyle>
                 <Style TargetType="{x:Type DataGridRow}">
@@ -82,5 +86,7 @@
 
             </DataGrid.Columns>
         </DataGrid>
+        <Button Grid.Column="1" Style="{StaticResource btn-primary}" Command="{Binding SaveCommand}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,20,0" FontSize="{StaticResource TextPrimerSize}" Height="80" Width="250" Grid.Row="1" Content="保存" />
+
     </Grid>
 </Page>
